cmake_minimum_required(VERSION 3.15)

PROJECT(vald)
include(CheckCCompilerFlag)
include(CheckIncludeFile)
include(CheckTypeSize)

add_library(va STATIC ${SRC_DIR}/va.cpp)
if(WIN32)
    add_library(va_win32 STATIC ${SRC_DIR}/va_win32.cpp)
else()
    add_library(va-drm STATIC ${SRC_DIR}/va_drm.cpp)
    add_library(va-x11 STATIC ${SRC_DIR}/va_x11.cpp)
    add_library(vdpau STATIC ${SRC_DIR}/vdpau.cpp)
endif()
